# merdraw

./: index.html  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  mcp.rs
src/components/: IconPicker.tsx  Inspector.tsx  MermaidPanel.tsx  Sidebar.tsx  Toolbar.tsx
src/flow/: FlowCanvas.tsx  IconNode.tsx  ShapeNode.tsx  canvasImage.ts  nodeTypes.ts  store.ts  types.ts
src/io/: icons.ts  project.ts  svgl.ts
src/mcp/: bridge.test.ts  bridge.ts
src/mermaid/: generate.test.ts  generate.ts  render.ts
