[package]
name = "merdraw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "merdraw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
ureq = "2"

# MCP server: embed rmcp with Streamable HTTP transport to expose the live
# diagram to AI clients. schemars is a direct dep (rmcp does not re-export it)
# pinned to rmcp 0.16's "1.0" so the derived JsonSchema satisfies rmcp's bound.
rmcp = { version = "0.16.0", features = ["server", "macros", "schemars", "transport-streamable-http-server"] }
axum = "0.8"
tokio = { version = "1", features = ["sync", "time", "rt", "net", "macros"] }
uuid = { version = "1", features = ["v4"] }
schemars = { version = "1", features = ["derive"] }

